Bug 281738 - could not sync from amarok to iphone
Summary: could not sync from amarok to iphone
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Collections/iPod iPhone (other bugs)
Version First Reported In: 2.4.3
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 2.5
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-10 09:45 UTC by jepong
Modified: 2011-12-20 11:05 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments
debug log (240.86 KB, text/plain)
2011-09-13 19:24 UTC, Landry MINOZA
Details
debug log with ipod nano (267.60 KB, text/plain)
2011-09-14 15:48 UTC, Landry MINOZA
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jepong 2011-09-10 09:45:00 UTC
Version:           2.4.3 (using KDE 4.7.0) 
OS:                Linux

whenever i sync music, I always get the message "Tracks not copied: the device already has these tracks".

Reproducible: Always

Steps to Reproduce:
1) open amarok
2) plug in iphone
3) once iphone is mounted, right-click song and choose Copy to Collection
4) error message appear "Tracks not copied: the device already has these tracks"

Actual Results:  
error message appear "Tracks not copied: the device already has these tracks"

Expected Results:  
song transfered to iphone

OS: Linux (i686) release 2.6.38-11-generic
Compiler: gcc
Comment 1 Myriam Schweingruber 2011-09-10 12:31:54 UTC
What type of files do you try to copy? Could be a duplicate of bug 234876
Comment 2 jepong 2011-09-11 00:15:29 UTC
music files such as mp3 and m4a
Comment 3 Myriam Schweingruber 2011-09-11 12:50:27 UTC
Thank you for the feedback.
Comment 4 Landry MINOZA 2011-09-13 19:24:44 UTC
Created attachment 63627 [details]
debug log
Comment 5 Landry MINOZA 2011-09-13 19:29:25 UTC
Just uploaded a debug log generated by:
LC_ALL amarok --debug
I used the same steps as the reporter except that my mobile device is not an ipod but a SanDisk Sansa Clip+ in MTP mode.
Amarok 2.4.3 on kde 4.6.5 (Debian Sid up to date)
Comment 6 Myriam Schweingruber 2011-09-14 07:40:24 UTC
Well, then it is another problem, since iPhones and MTP devices don't use the same connection protocol. Please open a separate report.
Comment 7 Landry MINOZA 2011-09-14 15:48:40 UTC
Created attachment 63646 [details]
debug log with ipod nano

Here is the log made with my ipod Nano, I tried to copy the same songs, and received exactly the same the same answer.
The behavior is the same with mass storage devices.

I really think that this is the same bug.
Comment 8 Myriam Schweingruber 2011-09-16 10:42:17 UTC
Changing status to confirmed.
Comment 9 Matěj Laitl 2011-10-22 13:49:45 UTC
Landry, I really think you hit a different bug. Am I right that you cannot copy a song to ANY device? Does these devices show up in KDE's Device Notifier? Or in `solid-hardware list`? If so, please open another bug and describe precisely your problem.

The original problem seem iPhone-specific.

jepong, what icon does your iPhone have in collection browser? Isn't it misidentified as ordinary USB device? Could you please post the output of `amarok --debug` when you try to copy a track to iPhone?
Comment 10 Matěj Laitl 2011-10-22 16:22:54 UTC
Git commit c408df382f35a2ed4480a095735982dd6031b2e0 by Matěj Laitl.
Committed on 22/10/2011 at 14:44.
Pushed by laitl into branch 'master'.

Properly recognize iPod 3G in MediaDeviceCache (extend iPod Touch 3G quirk)

We already had special case for devices whose product attribute
contained "iPod" in slotAddSolidDevice(), extend this special case also
for devices whose product attribute contains "iPhone".

This could fix bug 281738 and should end up in Amarok 2.5 beta 1, so
please test and reopen the bug if it still appeard in beta 1.

REVIEW: 102864
BUG: 281738
CCBUG: 245648
CCMAIL: manuwagner2009@gmail.com

M  +2    -0    ChangeLog
M  +4    -3    src/MediaDeviceCache.cpp

http://commits.kde.org/amarok/c408df382f35a2ed4480a095735982dd6031b2e0