Properly recognize iPod 3G in MediaDeviceCache (extend iPod Touch 3G quirk)

We already had special case for devices whose product attribute
contained "iPod" in slotAddSolidDevice(), extend this special case also
for devices whose product attribute contains "iPhone".

This could fix bug 281738 and should end up in Amarok 2.5 beta 1, so
please test and reopen the bug if it still appeard in beta 1.

REVIEW: 102864
BUG: 281738
CCBUG: 245648
CCMAIL: manuwagner2009@gmail.com